# kon-reh

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  build_config.toml  cc_copyright_template.tex  compile_latex.sh  copyright.tex  copyright_template.tex  konreh.txt  license-faq.md  menageries-mortgage.md  menageries-mortgage.tex  metaphysics.md  quick-reference-card.tex  third-party-policy.md  third-party-policy.tex  titlepage_template.tex
.github/: PULL_REQUEST_TEMPLATE.md
LICENSES/: CODE-MIT.txt  TEXT-CC-BY-NC-SA-4.0.txt
concordance/: the_concordance.tex
design-tokens/: README.md  tokens.sty
docs/: index.md
engine/: pyproject.toml
engine/konreh/: __init__.py  core.py  utils.py
engine/tests/: test_core.py
examples/: annotated_master_game.tex
ninth_rim/: the_ninth_rim.tex
rules/: rulebook.tex
tools/: add_copyright.py  add_copyright_include.py  arrows.sh  build_pdfs.py  build_pdfs2.py  build_ttrpg.py  build_ttrpg.sh  build_ttrpg2.py  compile_latex.py  compile_latex.sh  convert_to_american.py  cp2sb.sh  fix_broken_refs.py  fix_markup.py  fix_tags.py  fix_title.sh  fix_unicode.py  latex_print_standards.py  latex_to_html.py  make_tcolorbox_breakable.py  old_build.sh  old_compile.sh  one_liner.sh  open_close_check.sh  replace_elara.py  replace_name.py  unicode_find_sed.sh  unicode_to_latex.py
ttrpg/: .gitignore  README.md  Roll20_Roadmap.md  TODO.md  book_of_invocation.tex  book_of_spells.tex  book_of_summoning.tex  build_config.toml  character_sheet.tex  condensed_rules.md  (+17 more)
(+1274 files in other folders)
