[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "konreh"
version = "0.1.0"
description = "Kon’reh rules engine"
authors = [{name="Konreh Authors"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["engine/tests"]
